# pyqt6-date-range-popover

./: CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  coverage.xml  main.py  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
.hypothesis/constants/: 07304c100f826976  0a271de7bdfa430c  0f7a8aab1cb40cf9  1353f4cabd0ff149  1c299893bbe53a06  1cc6c6133db10628  2714b6ef425405de  2986e6bfefdd5375  2fd874b2c1422a4c  3245c53349c88009  339d56a2aa319648  346de633a9211138  3fe4c2348ec73889  43f1ee8bc3005d09  47681f3a57a8f3c7  52164d1e39a6f7b3  5250a97f8df9a362  5d386d5114fd6e66  612a8049fb8b9720  6d62dd5179321219  6eacb36ed2743dad  70e5d055d510a343  793dc6ea79fb1f6b  7e0c66ad89c63f9d  8351d554407d8e7e  87e3dc6484dbf0a0  895d4e754406800a  8a4daa48d8cc7178  8b24e00acbcff59c  8ccae5601d6cc965  9bc85563ffcfa6e4  a2ea6aa870f81a26  a621170c586d3fbc  aab0fb8a27995d77  abdd473a783c9893  b0fa41f9df41e8ff  b199006409f20ba8  b3fb275f78f0da53  bb66a83617ddfeaf  bef6f5d0539e242a  (+12 more)
date_range_picker/: __init__.py  date_range_picker_menu.py  exceptions.py
date_range_picker/animation/: slide_animator.py
date_range_picker/api/: __init__.py  config.py  picker.py
date_range_picker/components/: __init__.py  button_strip.py  calendar_widget.py  date_time_range_selector.py  input_with_icon.py
date_range_picker/components/buttons/: __init__.py  basic_button.py  button_strip.py
date_range_picker/components/calendar/: __init__.py  calendar_widget.py  day_cell.py  day_view.py  month_view.py  navigation.py  year_view.py
date_range_picker/components/inputs/: __init__.py  date_time_selector.py  input_with_icon.py
date_range_picker/components/layout/: __init__.py  draggable_header.py  sliding_track.py
date_range_picker/managers/: __init__.py  coordinator.py  state_manager.py  style_manager.py
date_range_picker/styles/: __init__.py  constants.py  style_registry.py  theme.py
date_range_picker/types/: __init__.py  signals.py
date_range_picker/utils/: __init__.py  date_utils.py  event_handlers.py  logging.py  signals.py  svg_loader.py
date_range_picker/validation/: __init__.py  validators.py
date_range_popover/: __init__.py  date_range_popover.py  exceptions.py
date_range_popover/animation/: __init__.py  slide_animator.py
date_range_popover/api/: __init__.py  config.py  picker.py  picker_layouts.py
date_range_popover/components/: __init__.py
date_range_popover/components/buttons/: __init__.py  button_strip.py
date_range_popover/components/calendar/: __init__.py  calendar_widget.py  day_cell.py  day_view.py  month_view.py  navigation.py  year_range_utils.py  year_view.py
date_range_popover/components/inputs/: __init__.py  date_time_selector.py  input_with_icon.py  time_completer.py
date_range_popover/components/layout/: __init__.py  draggable_header.py  sliding_track.py
date_range_popover/core/: state_logic.py
date_range_popover/managers/: __init__.py  coordinator.py  state_manager.py  style_manager.py
date_range_popover/styles/: __init__.py  constants.py  style_registry.py  style_templates.py  theme.py
date_range_popover/types/: __init__.py  selection.py  signals.py
date_range_popover/utils/: __init__.py  date_utils.py  event_handlers.py  logging.py  signals.py  svg_loader.py
date_range_popover/validation/: __init__.py  validators.py
docs/: ARCHITECTURE_DECISIONS.md  architecture.md  extending.md  index.md  roadmap.md
docs/api/: deprecation_policy.md  extension_points.md  public_api.md  reference.md
docs/images/: .gitkeep
examples/: __init__.py  basic_popover_demo.py  custom_theme_demo.py  extension_hooks_demo.py
site/: 404.html  index.html  objects.inv
site/ARCHITECTURE_DECISIONS/: index.html
site/api/deprecation_policy/: index.html
site/api/extension_points/: index.html
site/api/public_api/: index.html
site/api/reference/: index.html
site/architecture/: index.html
site/embedding/: index.html
site/extending/: index.html
site/roadmap/: index.html
site/search/: search_index.json
tests/: __init__.py  conftest.py
tests/properties/: test_invariants.py
tests/qt/: test_picker_widget.py
tests/regression/: test_example_embed.py
tests/unit/: test_config.py  test_date_utils.py  test_edge_dates.py  test_error_paths.py  test_logging_utils.py  test_picker_layouts.py  test_picker_modes.py  test_signals.py  test_state_manager.py  test_styles_constants.py  test_theme_validation.py  test_time_completer.py  test_validation.py  test_year_range_utils.py
