[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "valgo-date-range-popover"
version = "0.1.0"
description = "Reusable PyQt6 date range popover component."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Taitranz" },
]
keywords = ["PyQt6", "date picker", "ui", "calendar", "widget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "PyQt6>=6.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-qt>=4.3",
    "pytest-cov>=4.1",
    "pytest-env>=0.6",
    "hypothesis>=6.92",
    "mypy>=1.10",
]
dev = [
    "black>=24.4",
    "ruff>=0.6",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/Taitranz/pyqt6-date-range-popover"
Source = "https://github.com/Taitranz/pyqt6-date-range-popover"

[tool.hatch.build.targets.wheel]
packages = ["date_range_popover"]

[tool.hatch.build.targets.wheel.force-include]
"date_range_popover/assets" = "date_range_popover/assets"
"examples" = "examples"

[tool.hatch.build.targets.sdist]
include = [
    "date_range_popover",
    "examples",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.mypy]
files = ["date_range_popover"]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = ["PyQt6.*"]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["date_range_popover", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
branch = true
source = ["date_range_popover"]
dynamic_context = "test_function"
omit = [
    "date_range_popover/api/picker.py",
    "date_range_popover/animation/*",
    "date_range_popover/components/*",
    "date_range_popover/managers/coordinator.py",
    "date_range_popover/managers/style_manager.py",
    "date_range_popover/styles/style_registry.py",
    "date_range_popover/styles/style_templates.py",
    "date_range_popover/styles/theme.py",
    "date_range_popover/utils/event_handlers.py",
    "date_range_popover/utils/svg_loader.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

